# homelab.api.catcode

./: .gitignore  README.md  docker-compose.yaml
plugins/catdocs/: .dockerignore  .gitignore  Dockerfile  README.md  appconfig.yaml  catcode.yaml  main.py  pyproject.toml  settings.py  test.py
plugins/catdocs/catdocs/: __init__.py  builder.py  docs.py  event_bus.py  handler_registration.py  models.py  puplisher.py  queue.py  read_componnets.py  reader.py  service.py  tools.py  utils.py
plugins/catdocs/catdocs/cache/: __init__.py
plugins/catdocs/catdocs/core/events/: __init__.py  event_bus.py  events.py  handler_registration.py  message_broker.py
plugins/catdocs/catdocs/core/events/handlers/: __init__.py  changes.py  deletion.py  startup.py
plugins/catdocs/catdocs/core/mkdocs/: __init__.py  run.py
plugins/catdocs/catdocs/core/parser/: __init__.py
plugins/catdocs/catdocs/core/repository/: handler.py  reader.py
plugins/catdocs/catdocs/endpoints/: docs.py
plugins/catdocs/catdocs/events/: __init__.py  bus.py  events.py
plugins/catdocs/catdocs/filesystem/: __init__.py
plugins/catdocs/catdocs/handlers/: changes.py  deletion.py  mkdocs.py  startup.py
plugins/catdocs/catdocs/mkdocs/: __init__.py  run.py
plugins/catdocs/catdocs/repository/: handler.py
plugins/dependencies/: appconfig.yaml  catcode.yaml  main.py  pyproject.toml  settings.py
plugins/dependencies/dependecies/: endpoints.py  reader.py
services/core-api/: Dockerfile  README.md  appconfig.yaml  catcode-config.yaml  catcode.yaml  main.py  name.txt  pyproject.toml  settings.py
services/core-api/api/: appplications.py  statistics.py
services/core-api/api/core/: file_database.py  models.py
services/core-api/api/core/readers/: github.py
services/core-api/configs/: catcode-config.Production.yaml  catcode-config.yaml
services/core-api/core_api/: __init__.py  service.py
services/core-api/core_api/api/: appplications.py  base.py  config.py  statistics.py
services/core-api/core_api/core/: applications.py  cache.py  componentcache.py  startup.py  update.py
services/core-api/core_api/core/reader/: __init__.py  models.py  reader.py
services/core-api/core_api/core/reader/readers/: github.py
services/core-api/core_api/core/readers/: github.py
services/core-api/core_api/event/: event_bus.py  events.py  message_broker.py  queue.py  register_handlers.py
services/core-api/core_api/event/handlers/: __init__.py  new_component.py  startup.py  update.py
services/core-api/core_api/scheduler/: __init__.py  _scheduler.py
services/core-api/core_api/scheduler/tasks/: __init__.py  check_for_upppdates.py
services/scheduler/: main.py  pyproject.toml
services/scheduler/scheduler/: __init__.py  emitter.py  queue.py  scheduler.py
services/scheduler/scheduler/tasks/: check_for_upppdates.py
