[tool.poetry]
name = "catdocs"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
httpx = "^0.27.0"
extensions-opentelemetry = "^0.1.0"
extensions-configuration = "^0.1.2"
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
