[tool.poetry]
name = "dependencies"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"
package-mode = false


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw.local"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
extensions-opentelemetry = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
